
5.1.0 -> 5.2a0:
    - jbj: rpmwget: wire up --limit-rate. more to do ...
    - jbj: rpmwget: wire up --progress; only "bar|none" args implemented.
    - jbj: rpmwget: add rate/eta calculation to progress bar and logging.
    - jbj: rpmdav: prepare to tie wget logging into davNotify transitions.
    - at: rpmfi: new function: size_t rpmfiFNMaxLen(rpmfi).
    - at: rpmbuild: check for unpackaged subdirectories.
    - jbj: fix: resurrect cpuinfo() probe, hack-o-rounds for both /proc & libio.
    - jbj: rpmio: remove fdSize, rewrite rpmioSlurp to use Fstat(2) instead.
    - jbj: rpmdav: display connection state transitions while debugging.
    - jbj: rpmdav: add davDisconnect() to clean active requests before caching.
    - jbj: rpmwget: add a progress bar. no I/O rates or ETA yet.
    - jbj: install: retry callback reopen URI once to handle timeouts.
    - jbj: pkgio: use Fstat(2) for size check. more to do still ...
    - jbj: psm: fix: avoid lazy Stat(2) on active URI request.
    - jbj: rpmrpc: add Fstat(2) to map URI info into header statbuf early.
    - at: rpmbuild: check if the same files are packaged into a few sub-packages.
    - jbj: rpmwget: add --foodebug options, more wget-style spewage.
    - jbj: rpmdav: capture connection state transitions w wget-style spewage.
    - jbj: rpmdav: add global rpmioHttpConnectTimeoutSecs (unused) for now.
    - jbj: rpmdav: run OPTIONS once, repeat for every directory, through a URI.
    - jbj: rpmdav: add global rpmioHttp{Accept,ReadTimeoutSecs,UserAgent} for now.
    - jbj: rpmwget: wire up --spider to Stat(2) running HEAD.
    - rpm.org: single point to control how callbacks are made.
    - rpm.org: Don't leak memory on python expandMacro().
    - jbj: rpmgpg: stub in gpg options using popt.
    - rpm.org: get/set transaction keyring methods.
    - jbj: rpmio: add rpmkeyring API.
    - rpm.org: swipe the abstract keyring API.
    - jbj: rpmio: add Content-Disposition: handling (for rpmwget eventually).